--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
         </div>
     </footer>
 
-    <script src="js/app.js"></script>
+    <script src="/js/creandoCarrito.js"></script>
 
 </body>
 </html>
